<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/icBackgroundColorPrimary"
    android:orientation="vertical"
    android:padding="@dimen/padding">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        style="@style/Animation.AppCompat.DropDownUp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin"
        card_view:cardCornerRadius="@dimen/card_corner_radius"
        card_view:contentPadding="@dimen/content_padding">

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/background_color"
            android:orientation="vertical"
            android:padding="@dimen/padding">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/name_txt_vw_margin"
                android:layout_marginLeft="@dimen/name_txt_vw_margin"
                android:layout_marginRight="@dimen/name_txt_vw_margin"
                android:layout_marginStart="@dimen/name_txt_vw_margin"
                android:fontFamily="sans-serif-medium"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/name_list_item"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/product_name" />

            <TextView
                android:id="@+id/price"
                android:layout_width="@dimen/list_item_price_width"
                android:layout_height="@dimen/list_item_height"
                android:layout_marginEnd="@dimen/price_margin"
                android:layout_marginLeft="@dimen/price_margin"
                android:layout_marginRight="@dimen/price_margin"
                android:layout_marginStart="@dimen/price_margin"
                android:layout_marginTop="@dimen/price_margin_top"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/price_list_item"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.028"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name"
                tools:text="@string/book_price" />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="@dimen/quantity_list_item_width"
                android:layout_height="@dimen/quantity_list_item_height"
                android:layout_marginEnd="@dimen/quantity_margin"
                android:layout_marginLeft="@dimen/quantity_margin"
                android:layout_marginRight="@dimen/quantity_margin"
                android:layout_marginStart="@dimen/quantity_margin"
                android:layout_marginTop="@dimen/quantity_margin_top"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/quantity_list_item"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.031"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/price"
                tools:text="@string/quantity" />

            <ImageView
                android:id="@+id/add_book"
                android:layout_width="@dimen/add_book_icon_width"
                android:layout_height="@dimen/add_book_icon_height"
                android:layout_marginBottom="@dimen/add_book_icon_margin"
                android:layout_marginEnd="@dimen/add_book_icon_margin"
                android:layout_marginLeft="@dimen/add_book_icon_margin"
                android:layout_marginRight="@dimen/add_book_icon_margin"
                android:layout_marginStart="@dimen/add_book_icon_margin"
                android:layout_marginTop="@dimen/add_book_icon_margin"
                android:background="@color/add_book_icon_list_item"
                android:contentDescription="@string/add_book"
                android:src="@drawable/ic_add_book"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.618" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
